package com.siddy;

public enum Direction {
    NORTH,
    EAST,
    SOUTH,
    WEST
}
