package com.siddy;

public enum Error {
    NO_ERROR,
    ERROR_OVER_EDGE,
    ERROR_TAKEN_SPOT,
    ERROR_BAD_MOVEMENT_STRING
}
