@startuml
'https://plantuml.com/class-diagram

Rover }-- Plateau
Rover -- Direction

Error -- Plateau
Error -- Vehicle

class Plateau {
- X_MIN: int = 0
- Y_MIN: int = 0
- X_MAX: int
- Y_MAX: int

+ Plateau(x: int, y: int): void
+ move(x: int, y: int, d: Direction): Error
- collisionCheck(): Error
- edgeCheck(): Error
}

class Vehicle {
    - posX: int
    - posY: int
    - d: Direction

    + Vehicle(x: int, y: int, d: Direction)
    + processMovement(movement: String) : Error
    - checkMovementString(movement: String) : Error
    - goLeft()
    - goRight()
    - move(): Error
}

class Rover implements Vehicle {
}


enum Error {
    ERROR_OVER_EDGE,
    ERROR_TAKEN_SPOT,
    ERROR_BAD_MOVEMENT_STRING,
}

enum Direction {
NORTH,
EAST,
SOUTH,
WEST
}

@enduml